# opencv-static

./: .gitignore  CMakeLists.txt  README.md
opencv_install/include/opencv4/opencv2/: cvconfig.h
opencv_install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
